# monorepo

./: .coderabbit.yaml  .gitignore  .gitmodules  .megalinter.yml  .pre-commit-config.yaml  AGENTS.md  GRAPHQL_MCP_INSTALLATION.md  LICENSE.md  Makefile  Makefile.windows  PENTEST-PLAYBOOK.md  README.md  WORKFLOW.md  WORKFLOW.windows.md  apollo-mcp-config.example.json  create_flutter_structure.ps1  fetch_stitch.js  flutter_structure.txt  greptile.json  launch_backend_dev.sh  launch_debug.sh  linear-setup.json  lint-staged.config.js  mcp.json  ovh.conf  projects_list.txt  pubspec.yaml  rescates_main_screen.html  screen_code_output.txt  screen_image_output.txt  tools_list.json  wrangler.jsonc
.claude/: mcp.json  settings.json
.gemini/: settings.json
.graphite/: graphite.yaml
.security-reports/: dart-analyze.txt  npm-audit.json  shellcheck.json  summary-20260218-192659.md  summary-20260218-220800.md  (+10 more)
apps/agent-sidecar/: Dockerfile  main.py  pyproject.toml
apps/agent-sidecar/agents/: rescuer-matching.yaml
apps/agent-sidecar/config/: settings.py
apps/agent-sidecar/graphs/: __init__.py  rescuer_matching_graph.py  state.py
apps/agent-sidecar/graphs/nodes/: __init__.py  enrich_from_graph.py  fetch_candidates.py  rank_and_explain.py  score_candidates.py
apps/agent-sidecar/grpc/: interceptors.py  server.py
apps/agent-sidecar/grpc/handlers/: __init__.py  find_rescuers.py  record_outcome.py
apps/agent-sidecar/proto/: matching.proto
apps/agent-sidecar/scripts/: gen-proto.sh
apps/agent-sidecar/tests/: test_grpc_server.py  test_matching_graph.py
k8s/: README.md
(+1010 files in other folders)
